Changes db to postgres and adds plugins and themes.

--- a/Dockerfile.redmine
+++ b/Dockerfile.redmine
@@ -1,1 +1,15 @@
 FROM redmine:4.1-passenger
+
+WORKDIR /usr/src/redmine
+
+# Add plugins
+RUN cd plugins && \
+    git clone --depth 1 https://github.com/two-pack/redmine_xlsx_format_issue_exporter.git && \
+    git clone -b 0.4.0 --depth 1 https://github.com/haru/redmine_theme_changer.git && \
+    git clone -b 1.0.4 --depth 1 https://github.com/akiko-pusu/redmine_issue_templates.git && \
+    git clone -b v2.7.0 --depth 1 https://github.com/onozaty/redmine-view-customize.git view_customize && \
+    bundle install --jobs=4 --without development test
+
+# Add themes
+RUN cd public/themes \
+ && git clone --depth 1 https://github.com/mrliptontea/PurpleMine2.git
