--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,26 +4,42 @@ services:
     redmine:
         container_name: redmine
         build:
-          context: .
-          dockerfile: Dockerfile.redmine
+            context: .
+            dockerfile: Dockerfile.redmine
         restart: always
         ports:
             - 3000:3000
         volumes:
-            - ${REDMINE_DATA_PATH:-./redmine-data}/files:/usr/src/redmine/public/files
-            - ${REDMINE_DATA_PATH:-./redmine-data}/log:/usr/src/redmine/public/log
+            - ${REDMINE_PATH_FILES:-./data/redmine/files}:/usr/src/redmine/public/files
+            - ${REDMINE_PATH_LOG:-./data/redmine/log}:/usr/src/redmine/public/log
         environment:
-            REDMINE_DB_MYSQL: redmine-db
-            REDMINE_DB_ENCODING: utf8mb4
-            REDMINE_DB_PASSWORD: redmine
+            REDMINE_PLUGINS_MIGRATE: 1
+            REDMINE_DB_POSTGRES: postgres
+            REDMINE_DB_ENCODING: utf8
+            REDMINE_DB_USERNAME: ${REDMINE_DB_USERNAME:-redmine}
+            REDMINE_DB_PASSWORD: ${REDMINE_DB_PASSWORD:-redmine}
+            TZ: Asia/Tokyo
+        links:
+            - postgres
 
-    redmine-db:
-        image: mariadb:10.5
-        container_name: redmine-db
+    postgres:
+        container_name: postgres_redmine
+        build:
+            context: .
+            dockerfile: Dockerfile.postgres
+        volumes:
+            - ${POSTGRES_PATH_DB:-./data/postgres/db-data}:/var/lib/postgresql/data
+            - ${POSTGRES_PATH_INITDB:-./data/postgres/initdb}:/docker-entrypoint-initdb.d
+        ports:
+            - "5432:5432"
         restart: always
         environment:
-            MYSQL_ROOT_PASSWORD: redmine
-            MYSQL_DATABASE: redmine
-        volumes:
-            - ${REDMINE_DATA_PATH:-./redmine-data}/db:/var/lib/mysql
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
+            POSTGRES_ROOT_PASSWORD: ${POSTGRES_ROOT_PASSWORD:-postgres}
+            POSTGRES_DATABASE: redmine
+            POSTGRES_USER: ${REDMINE_DB_USERNAME:-redmine}
+            POSTGRES_PASSWORD: ${REDMINE_DB_PASSWORD:-redmine}
+            TZ: Asia/Tokyo
+
+volumes:
+    redmine:
+    postgres:
